Fix footer contrast

--- a/styles/base.css
+++ b/styles/base.css
@@ -50,7 +50,7 @@ footer {
 }
 
 #lastModified {
-    color: rgb(244, 182, 13);
+    color: #ffffff;
 }
 
 h1 {
